<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"

    tools:context=".Information">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/imgProfile"
       android:orientation="vertical"
       >
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/create_your_profile"
           android:textSize="30sp"
           android:layout_gravity="center"
           />

       <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:src="@drawable/ic_person_black_24dp"
           android:layout_gravity="center"
           />
   </LinearLayout>


    <LinearLayout
        android:id="@+id/linearL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:layout_below="@id/imgProfile">

        <TextView
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textStyle="italic" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:gravity="center_horizontal"
            android:paddingStart="8dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearL1"
        android:paddingLeft="16dp">

        <TextView
            android:id="@+id/txtMobile1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_info"
            android:textStyle="italic" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_infor"
            android:paddingStart="8dp"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:layout_gravity="center"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearL2"
        android:paddingLeft="16dp"
        android:id="@+id/linearL3"
        >

        <TextView
            android:id="@+id/txtPass1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_Info"
            android:textStyle="italic" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_Infor"
            android:paddingStart="8dp"
            android:gravity="center_horizontal"
            android:inputType="textPassword"
            android:layout_gravity="center"
            />

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_back"
        android:text="@string/next"
        android:layout_below="@id/linearL3"
        android:textAllCaps="false"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        />


</RelativeLayout>