<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#01579B"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/liner"
        android:orientation="vertical">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/kong_dunga"
           android:layout_gravity="center"
           android:textSize="30sp"
           android:textColor="#ffffff"
           />


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kuku"
            android:id="@+id/logo"
            android:layout_gravity="center"
            />



    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/liner"
    android:orientation="vertical"
    android:id="@+id/linear"
    >

    <EditText
        android:id="@+id/edTxtMobile1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/mobile"
        android:shadowColor="#ffffff"
        android:textColor="@android:color/white"
        android:textColorHint="#ffffff"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/edTxtPass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"
        android:shadowColor="#ffffff"
        android:textColor="@android:color/white"
        android:textColorHint="#ffffff"
        android:inputType="textPassword"

        />


</LinearLayout>

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:orientation="vertical"

        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_back"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:id="@+id/signInBtn"
            android:onClick="checker"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="16dp"
        android:text="@string/create_account"
        android:textColor="#ffffff"
        android:textSize="15sp"
        android:textStyle="italic"
        android:onClick="goInformation"

        android:layout_below="@id/linear1"
        />


</RelativeLayout>